docker/deployment-mongo.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
    labels:
      app: demo-mongo
      application: demo-mongo
      createdBy: ZCVV
    name: demo-mongo
    namespace: tst-namespace-default
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: demo-mongo
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: demo-mongo
      spec:
        containers:
        - env:
          - name: ENVIRONMENT
            value: DEV
          - name: SPRING_PROFILES_ACTIVE
            value: DEV
          - name: SPRING_CONFIG_LOCATION
            value: file:/usr/app/config/
          - name: SPRING_APPLICATION_NAME
            value: demo-mongo
          - name: CPU_REQ
          image: zelmarcvv/demo-mongo
          imagePullPolicy: Always
          name: demo-mongo
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /usr/app/config/
            name: demo-mongo-volume
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: demo-mongo-volume
          projected:
            defaultMode: 420
            sources:
            - configMap:
                name: demo-mongo-cm
            - configMap:
                name: parameter-cm
kind: List
metadata:
  resourceVersion: ""
