docker/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo-mongo
    application: demo-mongo
    createdBy: ZCVV
  name: demo-mongo
  namespace: tst-namespace-default
  resourceVersion: "60306"
  uid: 713fe922-2c66-475c-9311-bf2f0b7e356c
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 80-tcp
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: 10334-tcp
    port: 10334
    protocol: TCP
    targetPort: 10334
  - name: 57743-tcp
    port: 57743
    protocol: TCP
    targetPort: 57743
  - name: 443-tcp
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: demo-mongo
  sessionAffinity: None
  type: ClusterIP
