docker/ingress.yml
apiVersion: v1
kind: Ingress
metadata:
  name: mongo-demo
spec:
  rules:
    - host: mongotest.sample
      http:
        paths:
          - path: /
            backend:
              serviceName: mongo-demo
              servicePort: 8080
